--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -16,6 +16,16 @@
     h3{
         margin-right:15px;
     }
+    .btn-search{
+        background-color: rgb(250, 67, 67);
+        height: 40px;
+        width:70px;
+        color: white;
+    }
+    .input-search{
+        height: 34px;
+
+    }
 }
 
 
@@ -34,14 +44,14 @@
     .container-films_series{
         
         display: flex;
-        justify-content: center;
         align-items: center;
         flex-wrap: wrap;
         
 
         .container-card{
-            width: calc(100% / 3);
+            width: calc(100% / 3 - 12px) ;
             height: 800px;
+            border: 2px solid rgb(143, 142, 142);
             
 
             .card{
@@ -83,8 +93,24 @@
                         margin-bottom: 10px;
                         margin-right: 15px;
                     }
-                    
-                    
+                    .yellow{
+                        color:yellow;
+                    }
+                    .white{
+                        color:white;
+                    }
+                    i{
+                        letter-spacing: 3px;
+                    }
+                    .text-centre{
+                        text-align: center;
+                    }
+                    .overview{
+                        margin: 0;
+                    }
+                    .text-underline{
+                        text-decoration: underline;
+                    }
                 }
 
                
